# gruppe3

./: .gitignore  README.html  README.md  notes.ipynb  pyproject.toml
.github/workflows/: publish.yml
data/: build_dataset.py
data/processed/: baci_gold_with_inflation.csv  country_mapping.csv
data_acquisition/: build_dataset.py  country_mapping.py
deployment/: app.py
docs/: _quarto.yml  data_report.html  data_report.qmd  deployment.html  evaluation.qmd  index.qmd  meeting_notes.qmd  project_charta.qmd  refs.bib  viz_design_report.qmd
docs/_freeze/data_report/execute-results/: html.json
eda/: aisosa_baci.ipynb  aisosa_barchart.ipynb  aisosa_eda.ipynb  aisosa_notes.md  generate-data-profile.py
notebooks/: notes.ipynb
summaries/: Central_Banks_Great_Inflation.md  Gold.docx  Gold_Inflation_Hedge_Recession.md  aisosa_research.md
